tests/security/taintedInputFromParam/output.txt
ERROR: TaintedData - input.hack:16:22 - Data from a URL query string found its way to a SQL query using path $_GET --ExpressionFetch(ArrayValue, "user_id")--> $_GET['user_id'] (input.hack:3:25) --Default--> A::getUserId() (input.hack:2:35) --Default--> composition-input.hack:168-195 (input.hack:7:16) --Default--> A::getAppendedUserId() (input.hack:6:43) --Default--> $userId (input.hack:11:9) --Default--> call to A::deleteUser (input.hack:12:34) --Default--> A::deleteUser#2 (input.hack:15:67) --Default--> $userId (input.hack:15:67) --Default--> composition-input.hack:471-517 (input.hack:16:22) --Default--> call to AsyncMysqlConnection::query (input.hack:16:22) --Default--> AsyncMysqlConnection::query#1 (hi_embedded_stdlib/builtins_async_mysql.hhi:164:12)